# milestone-1-ai

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  document_app.py  document_streamlit_app.py  main.py  monitoring.db  presentation.md  product_knowledge_app.py  pyproject.toml
src/agents/: __init__.py  base_agent.py  langgraph_workflow.py  persona_agent.py  product_identifier_agent.py  rag_agent.py  supervisor_agent.py  workflow_orchestrator.py
src/controller/: __init__.py  dashboard_controller.py  document_controller.py
src/domain/: document.py  persona.py
src/infrastructure/: __init__.py  document_processor.py  guardrails_config.py  guardrails_service.py  langgraph_chat.py  langsmith_setup.py  monitoring_service.py  openai_service.py  persona_langgraph_chat.py
src/ports/: document_repository_port.py
src/repository/: document_milvus_repository.py
src/usecase/: document_usecase.py
